[Fix] Layout Wrap

--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,8 @@ main {
 .card {
   width: calc(100% / 3);
   max-width: 500px;
+  min-width: 400px;
   height: 750px;
-  max-height: 750px;
   padding: 0 10px;
   margin-bottom: 50px;
 }
